--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.4",
     "axios": "^0.27.2",
+    "country-state-city": "^3.0.1",
     "framer-motion": "^6.3.3",
     "json-server": "^0.17.0",
     "react": "^18.0.0",
