--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "country-state-city": "^3.0.1",
     "framer-motion": "^6.3.3",
     "json-server": "^0.17.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
